# gnomemapofflinermpca-rust

./: .gitignore  Cargo.toml  INSTRUCTIONS.md  OFFLINE_CAPABILITIES_REPORT.md  README.md  RouteMaster.toml  config.json  format-usb.sh  gnome-maps-rmpca.desktop  launch-gnome-maps.sh  setup-freebsd.sh
gnome-maps-main/: meson.build
gnome-maps-main/data/: gschemas.compiled  meson.build  org.gnome.Maps.data.gresource.xml.in  org.gnome.Maps.gschema.xml
gnome-maps-main/data/ui/: cpp-view.blp  route-view.blp
gnome-maps-main/src/: bboxSelector.js  cppOptimizer.js  cppRoute.js  cppView.js  mapView.js  org.gnome.Maps.src.gresource.xml.in  polygonSelector.js  rmpcaRouter.js  routeQuery.js  routeView.js  routingDelegator.js
src/: client.rs  config.rs  main.rs
src/commands/: clean.rs  compile_map.rs  extract_osm.rs  extract_overture.rs  logs.rs  mod.rs  optimize.rs  pipeline.rs  route.rs  serve.rs  status.rs  validate.rs
src/geo/: mod.rs  parsing.rs  spatial.rs  types.rs
src/optimizer/: abstractions.rs  ffi.rs  graph.rs  hierholzer.rs  matching.rs  mod.rs  types.rs
src/osm/: mod.rs  serve_parser.rs
src/tests/: mock_graph.rs  mod.rs  property_tests.rs
